- Correction of display bugs on mobile devices and tablets.

--- a/src/scss/components/navbar/_navbar.scss
+++ b/src/scss/components/navbar/_navbar.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: space-between;
     flex-shrink: 0;
-    height: 100vh;
+    height: 100%;
     width: 6rem;    
     .navbar-links {
         display: flex;
@@ -18,7 +18,7 @@
             width: 100%;          
             & a {
                 display: block;                
-                font-size: $fontSizeSmall;
+                font-size: $fontSizeDefault;
                 width: 100%;
                 height: 100%;              
                 & i {
