--- a/src/scss/components/section/_sections.scss
+++ b/src/scss/components/section/_sections.scss
@@ -5,7 +5,6 @@
 .content {
     background: $dark-light-color;
     color: $default-color;  
-    @include flex-center;  
     position: fixed;
     bottom: 0;    
     right: 0;     
@@ -28,10 +27,14 @@
 
 .regular-section {
     display: grid;
-    grid-template-columns: 50% 50%;  
+    grid-template-columns: 50% 50%;
+    height: 100%;
     .regular-item-text {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
         width: 100%;              
-        padding: 0 6rem;
+        padding: 0 6rem;        
         & h1 {
             margin: 1rem 0;
             font-size: 3rem;
@@ -39,7 +42,7 @@
             color: $default-color;            
         }
         & p, span {
-            font-size: $fontSizeSmall;
+            font-size: $fontSizeDefault;
             color: $light-color;
         }
         & a {
@@ -51,7 +54,7 @@
             }
         }
     }
-    .regular-item-image {
+    .regular-item-image {        
         @include flex-center;
         flex-direction: column;
         & img {            
@@ -80,13 +83,15 @@
     .regular-item-text {
         padding: 0 4rem;
     }
+    .content-overflow-y {
+        overflow-y: auto;
+    }
 }
 
 @include media-breakpoint-md {
     .regular-section {   
         grid-template-columns: 100%;
-        grid-template-rows: auto auto;
-        overflow-y: auto;
+        grid-template-rows: auto auto;        
     }
 }
 
@@ -96,15 +101,18 @@
     }
     .regular-section {
         .regular-item-text {
+            margin-top: 6rem;
             padding: 0 2rem;
             & h1 {                
                 font-size: 2.2rem;
             }
             & p {
-                font-size: 1.2rem;
+                font-size: $fontSizeSmall ;
             }
         }
         .regular-item-image {
+            padding: 0 2rem;
+            margin-bottom: 2rem;
             & img {
                 margin: 1rem;
             }            
