--- a/src/scss/components/section/sectionWork/modalGallary/_modalGallary.scss
+++ b/src/scss/components/section/sectionWork/modalGallary/_modalGallary.scss
@@ -1,5 +1,6 @@
 .modal-gallary-container {
-    background: $modal-bg;        
+    background: $modal-bg;  
+    display: flex;      
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -7,7 +8,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;         
+    height: 100%; 
+    padding: 2rem;        
     .modal-gallary-button-close {
         background: inherit;
         color: $light-color;        
@@ -33,8 +35,9 @@
     display: flex !important;
     align-items: center;
     justify-content: center;
-    height: 80vh;
-    width: auto;    
+    height: 70vh;
+    width: auto;
+    outline-style: none;    
     & img {             
         width: 100%;
         height: auto;
@@ -45,6 +48,7 @@
     .modal-gallary-container {
         top: 6rem;
         height: calc(100%-6rem);
+        padding: 0;
     }
     .modal-image-container {
         height: 60vh;
